[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_F.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_Hip.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_B.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_B_Shield.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_01/Pawn_01-Legs_F_Shield.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Pawns/Pawn_01_Parts/Pawn_01_Legs.gd" type="Script" id=6]

[sub_resource type="Animation" id=2]
resource_name = "Crawl"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg_F:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Leg_B:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("B_Shield:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("F_Shield:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Leg_F:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg_B:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("F_Shield:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("B_Shield:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Leg_B:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Leg_F:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("B_Shield:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("F_Shield:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[node name="Pawn_01_Legs" type="Node2D"]
script = ExtResource( 6 )

[node name="B_Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 4 )
hframes = 31
frame = 3

[node name="F_Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 5 )
hframes = 31
frame = 7

[node name="Leg_B" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 3 )
hframes = 31
frame = 16

[node name="Leg_F" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 1 )
hframes = 31
frame = 16

[node name="Hip" type="Sprite" parent="."]
position = Vector2( 0, 10 )
texture = ExtResource( 2 )
hframes = 31

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Crawl = SubResource( 2 )
anims/Run = SubResource( 1 )
anims/Stand = SubResource( 3 )
